--- a/tools/tavily/tools/tavily_crawl.yaml
+++ b/tools/tavily/tools/tavily_crawl.yaml
@@ -154,17 +154,6 @@ parameters:
     required: false
     type: boolean
     default: false
-  - name: categories
-    form: llm
-    human_description:
-      en_US: Page categories to focus on (comma-separated, e.g., "Documentation,Blog,Developer").
-      zh_Hans: 要关注的页面类别（逗号分隔，例如"Documentation,Blog,Developer"）。
-    label:
-      en_US: Categories
-      zh_Hans: 类别
-    llm_description: Comma-separated page categories to focus on. Options include Documentation, Blog, Community, About, Contact, Privacy, Terms, Pricing, Enterprise, Careers, E-Commerce, Developer, Solutions, Partners, Downloads, Media, Events, People.
-    required: false
-    type: string
   - name: extract_depth
     form: form
     human_description:
@@ -247,3 +236,14 @@ parameters:
     required: false
     type: boolean
     default: false
+  - name: project_id
+    form: form
+    human_description:
+      en_US: Optional project ID for tracking and analytics purposes. Will be sent as X-Project-ID header.
+      zh_Hans: 用于跟踪和分析目的的可选项目 ID。将作为 X-Project-ID 标头发送。
+    label:
+      en_US: Project ID
+      zh_Hans: 项目 ID
+    llm_description: Optional project ID for usage tracking and analytics.
+    required: false
+    type: string
