--- a/models/gemini/pyproject.toml
+++ b/models/gemini/pyproject.toml
@@ -8,21 +8,19 @@ requires-python = ">=3.12"
 # uv pip compile pyproject.toml -o ./requirements.txt
 dependencies = [
     "dify-plugin>=0.5.1,<0.6.0",
-    "zope-event==6.0",
-    "google-auth==2.41.1",
-    "google-genai>=1.56.0,<2.0.0",
+    "google-genai>=1.60.0",
     "google-generativeai>=0.8.5",
-    "numpy>=2.3.2",
+    "numpy>=2.4.1",
 ]
 
 # uv run black . -C -l 100 && uv run ruff check --fix
 [dependency-groups]
 dev = [
-    "black>=25.1.0",
-    "pytest>=8.4.1",
-    "ruff>=0.12.5",
-    "python-dotenv>=1.0.0",
-    "Pillow>=11.3.0",
+    "black>=26.1.0",
+    "pytest>=9.0.2",
+    "ruff>=0.14.14",
+    "python-dotenv>=1.2.1",
+    "Pillow>=12.1.0",
 ]
 
 [tool.pytest.ini_options]
