--- a/tools/somark/tools/extract.yaml
+++ b/tools/somark/tools/extract.yaml
@@ -9,7 +9,7 @@ description:
   human:
     en_US: Convert various document types—including PDFs, images, and more—into structured Markdown or JSON using the Somark API.
     zh_Hans: 使用 Somark API 将各种文档（如 PDF、图片等）转换为结构化的 Markdown 或 JSON 格式。
-  llm: A precise and reliable tool that utilizes the Somark API to convert documents (including PDFs, images, and DOC files) into clean, structured Markdown or JSON format, preserving the original layout and content hierarchy.
+  llm: A precise and reliable tool that utilizes the Somark API to convert various document formats (PDF, PNG, JPG, etc.) into clean, structured Markdown or JSON format, preserving the original layout and content hierarchy.
 
 parameters:
   - name: file
