--- a/models/moonshot/manifest.yaml
+++ b/models/moonshot/manifest.yaml
@@ -1,8 +1,8 @@
 author: langgenius
 created_at: '2024-09-20T00:13:50.29298939-04:00'
 description:
-  en_US: Models provided by Moonshot, such as kimi-k2, moonshot-v1-8k, moonshot-v1-32k, and moonshot-v1-128k.
-  zh_Hans: Moonshot 提供的模型，例如 kimi-k2, moonshot-v1-8k、moonshot-v1-32k 和 moonshot-v1-128k。
+  en_US: Models provided by Moonshot, such as kimi-k2.5, kimi-k2, moonshot-v1-8k, moonshot-v1-32k, and moonshot-v1-128k.
+  zh_Hans: Moonshot 提供的模型，例如 kimi-k2.5, kimi-k2, moonshot-v1-8k、moonshot-v1-32k 和 moonshot-v1-128k。
 icon: icon_s_en.png
 label:
   en_US: Moonshot
@@ -34,4 +34,4 @@ resource:
     tool:
       enabled: true
 type: plugin
-version: 0.1.0
+version: 0.1.1
