--- a/models/oci/models/llm/models/openai/openai.gpt-oss-20b.yaml
+++ b/models/oci/models/llm/models/openai/openai.gpt-oss-20b.yaml
@@ -5,6 +5,7 @@ label:
   ja_JP: openai.gpt-oss-20b
 model_type: llm
 features:
+  - agent-thought
   - tool-call
   - multi-tool-call
   - stream-tool-call
