--- a/tools/neo4j/pyproject.toml
+++ b/tools/neo4j/pyproject.toml
@@ -7,8 +7,8 @@ requires-python = ">=3.12"
 
 # uv pip compile pyproject.toml -o ./requirements.txt
 dependencies = [
-    "dify_plugin",
-    "neo4j",
+    "dify_plugin>=0.5.0,<0.8.0",
+    "neo4j>=5.0.0",
 ]
 
 # uv run black . -C -l 100 && uv run ruff check --fix
