feat(tongyi): add Kimi K2 series models support
Add three new Kimi models from Bailian platform:
- kimi-k2.5: versatile model with vision and thinking mode support
- kimi-k2-thinking: dedicated thinking model with reasoning_content
- Moonshot-Kimi-K2-Instruct: fast non-thinking model

Update llm.py to handle thinking mode for kimi models:
- kimi-k2.5 with enable_thinking=true forces streaming output
- kimi-k2-thinking always forces streaming output
- Both support incremental_output for proper reasoning display

Update version to 0.1.27.

--- a/models/tongyi/models/llm/_position.yaml
+++ b/models/tongyi/models/llm/_position.yaml
@@ -3,6 +3,9 @@
 - qwq-plus-0305
 - qwq-plus
 - qwq-32b
+- kimi-k2.5
+- kimi-k2-thinking
+- Moonshot-Kimi-K2-Instruct
 - deepseek-r1
 - deepseek-r1-distill-qwen-14b
 - deepseek-r1-distill-qwen-32b
