--- a/models/openrouter/manifest.yaml
+++ b/models/openrouter/manifest.yaml
@@ -24,7 +24,7 @@ resource:
       enabled: false
 type: plugin
 plugins:
-  models:
+  models:π
     - provider/openrouter.yaml
-version: 0.0.34
+version: 0.0.35
 created_at: 2024-09-20T00:13:50.29298939-04:00
