--- a/models/aihubmix/pyproject.toml
+++ b/models/aihubmix/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "google-genai>=1.56.0",
     "anthropic~=0.57.1",
     "pillow~=11.3.0",
+    "urllib3>=2.6.3",
 ]
 
 # uv run black . -C -l 100 && uv run ruff check --fix
