fix(volcengine_maas): ensure dify_plugin>=0.7.0 and add Dify version requirement
## Problem
Plugin using MultiModalContent requires dify_plugin 0.7.0+, but pyproject.toml
allowed versions as low as 0.5.0, causing ImportError in test stage.

## Changes
- Updated dify_plugin version range: >=0.5.0,<0.8.0 → >=0.7.0,<0.8.0
- Added minimum_dify_version: 1.10.0 to manifest.yaml
- Regenerated requirements.txt

## Impact
- Ensures dify_plugin SDK >= 0.7.0 (with MultiModalContent support)
- Prevents users on Dify < 1.10.0 from installing/updating plugin

--- a/models/volcengine_maas/manifest.yaml
+++ b/models/volcengine_maas/manifest.yaml
@@ -16,6 +16,7 @@ meta:
     language: python
     version: '3.12'
   version: 0.0.1
+  minimum_dify_version: 1.10.0
 name: volcengine_maas
 plugins:
   models:
@@ -34,4 +35,4 @@ resource:
     tool:
       enabled: true
 type: plugin
-version: 0.0.42
+version: 0.0.43
