test: add tests for minimax

--- a/models/minimax/pyproject.toml
+++ b/models/minimax/pyproject.toml
@@ -12,4 +12,6 @@ dependencies = [
 
 # uv run black . -C -l 100 && uv run ruff check --fix
 [dependency-groups]
-dev = []
+dev = [
+    "pytest>=9.0.2",
+]
