--- a/models/minimax/pyproject.toml
+++ b/models/minimax/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 
 # uv pip compile pyproject.toml -o ./requirements.txt
 dependencies = [
+    "anthropic>=0.79.0",
     "dify_plugin<0.6.0,>=0.5.0",
 ]
 
