--- a/models/volcengine/models/llm/doubao-seed-1-6-251015.yaml
+++ b/models/volcengine/models/llm/doubao-seed-1-6-251015.yaml
@@ -1,7 +1,7 @@
 model: doubao-seed-1-6-251015
 label:
-  en_US: Doubao Seed 1.6
-  zh_Hans: 豆包 Seed 1.6
+  en_US: doubao-seed-1-6-251015
+  zh_Hans: doubao-seed-1-6-251015
 model_type: llm
 features:
   - agent-thought
