--- a/models/volcengine/models/llm/doubao-seed-translation-250915.yaml
+++ b/models/volcengine/models/llm/doubao-seed-translation-250915.yaml
@@ -5,4 +5,13 @@ label:
 model_type: llm
 features:
   - agent-thought
-  - tool-call
+model_properties:
+  mode: chat
+  context_size: 4000
+parameter_rules:
+  - name: temperature
+    use_template: temperature
+  - name: top_p
+    use_template: top_p
+  - name: max_tokens
+    use_template: max_tokens
