--- a/models/volcengine/.difyignore
+++ b/models/volcengine/.difyignore
@@ -15,6 +15,9 @@ __pycache__/
 # Lockfiles generated locally (CI uses uv internally)
 uv.lock
 
+# Local debug settings
+.env
+
 # Test output
 .coverage
 htmlcov/
