--- a/models/volcengine/pyproject.toml
+++ b/models/volcengine/pyproject.toml
@@ -6,9 +6,9 @@ readme = "README.md"
 requires-python = ">=3.12"
 
 dependencies = [
-  "dify_plugin==0.7.0",
+  "dify_plugin~=0.7.1",
   "volcengine-python-sdk[ark]>=5.0.1,<6.0.0",
 ]
 
 [dependency-groups]
-dev = ["pytest"]
+dev = ["pytest", "pyyaml"]
