--- a/models/volcengine/pyproject.toml
+++ b/models/volcengine/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 
 dependencies = [
-  "dify-plugin>=0.7.1",π
+  "dify-plugin>=0.7.1",
   "volcengine-python-sdk[ark]>=5.0.1,<6.0.0",
 ]
 
