--- a/models/volcengine/pyproject.toml
+++ b/models/volcengine/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.12"
 
 dependencies = [
   "dify-plugin>=0.7.1",
-  "volcengine-python-sdk[ark]>=5.0.1,<6.0.0",
+#  "volcengine-python-sdk[ark]>=5.0.1,<6.0.0",
 ]
 
 [dependency-groups]
