--- a/models/gemini/models/llm/gemini-3-flash-preview.yaml
+++ b/models/gemini/models/llm/gemini-3-flash-preview.yaml
@@ -18,6 +18,7 @@ model_properties:
   context_size: 1048576
 parameter_rules:
   - name: temperature
+    use_template: temperature
     type: float
     required: true
     default: 1
@@ -29,6 +30,12 @@ parameter_rules:
     help:
       en_US: For Gemini 3, best results at default 1.0. Lower values may impact reasoning.
       zh_Hans: 对于 Gemini 3，使用默认值 1.0 可获得最佳效果。数值过低可能会影响推理能力。
+  - name: top_p
+    use_template: top_p
+    default: 0.95
+  - name: top_k
+    use_template: top_k
+    default: 64
   - name: include_thoughts
     type: boolean
     required: true
@@ -124,6 +131,7 @@ parameter_rules:
       zh_Hans: 让 Gemini 使用代码来解决复杂任务。
       ja_JP: Gemini にコードを使って複雑なタスクを解決させましょう。
   - name: max_output_tokens
+    use_template: max_tokens
     type: int
     required: true
     default: 65536
