--- a/models/openrouter/models/llm/gemini-2.5-flash-lite-preview-06-17.yaml
+++ b/models/openrouter/models/llm/gemini-2.5-flash-lite-preview-06-17.yaml
@@ -12,8 +12,12 @@ model_properties:
 parameter_rules:
   - name: temperature
     use_template: temperature
+    default: 1
+    min: 0
+    max: 2
   - name: top_p
     use_template: top_p
+    default: 0.95
   - name: top_k
     label:
       zh_Hans: 取样数量
