--- a/models/volcengine/manifest.yaml
+++ b/models/volcengine/manifest.yaml
@@ -1,5 +1,5 @@
 author: langgenius
-created_at: '2026-02-14T20:15:00+08:00'
+created_at: "2026-02-14T20:15:00+08:00"
 description:
   en_US: Volcengine Ark base-model invocation (no endpoint required). Uses official volcengine-python-sdk[ark].
   zh_Hans: 火山方舟基础模型直连调用（无需推理接入点）。使用官方 volcengine-python-sdk[ark]。
@@ -9,17 +9,17 @@ label:
   zh_Hans: 火山方舟
 meta:
   arch:
-  - amd64
-  - arm64
+    - amd64
+    - arm64
   runner:
     entrypoint: main
     language: python
-    version: '3.12'
+    version: "3.12"
   version: 0.0.1
 name: volcengine
 plugins:
   models:
-  - provider/volcengine.yaml
+    - provider/volcengine.yaml
 resource:
   memory: 268435456
   permission:
@@ -32,4 +32,4 @@ resource:
       text_embedding: false
       tts: false
 type: plugin
-version: 0.0.1
+version: 0.0.2
