--- a/models/volcengine/models/llm/kimi-k2-250905.yaml
+++ b/models/volcengine/models/llm/kimi-k2-250905.yaml
@@ -6,6 +6,7 @@ model_type: llm
 features:
   - agent-thought
   - tool-call
+  - multi-tool-call
   - stream-tool-call
 model_properties:
   mode: chat
