docs: enhance README with detailed usage steps and add new workflow images

--- a/tools/somark/tools/extract.yaml
+++ b/tools/somark/tools/extract.yaml
@@ -3,7 +3,7 @@ identity:
   author: SoulCode
   label:
     en_US: Extract Document
-    zh_Hans: 文档解析
+    zh_Hans: SoMark文档解析
 
 description:
   human:
